- Rename package name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.uttampanchasara.scanner"
+        applicationId "com.uttampanchasara.icollect"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
