--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
+    implementation ('io.socket:socket.io-client:1.0.0') {
+        // excluding org.json which is provided by Android
+        exclude group: 'org.json', module: 'json'
+    }
+
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 }
